Refactor pagination and collection-related services
- Standardize pagination response with generic PaginationResponse
- Simplify collection service methods and remove redundant user checks
- Update repository methods to support more flexible collection and free pattern queries
- Introduce PaginationMapper for consistent pagination response generation
- Remove deprecated pagination response classes
- Adjust default pagination parameters (page size, sort direction)